# optimize_examples

./: Cargo.toml  README.md
examples/: contour_with_plotpy.rs  gradient_descent_1.rs  gradient_descent_2.rs
src/: autograd.rs  bracketing.rs  lib.rs  test_math_funcs.rs
src/autograd/: compute_graph.rs
src/autograd/compute_graph/: basic_fn.rs  node.rs
