[package]
name = "optimize_examples"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.uuid]
version = "1.11"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
plotpy = "1.10"
rand = "0.8"
approx = "0.5"
glam = "0.29"
